5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1734_2504.log
== TEST (2019-05-11 12:23:00) 
-- CODE:
virus = int(input("Quantidade inicial de cópia do vírus: "))
leucocitos = int(input("Quantidade inicial de leucocitos: "))
percVirus = float(input("Percentual de multiplicacao diaria do virus: "))
percLeucocitos = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dias = 0

while(leucocitos >= (virus*2)):
	virus = virus + virus * (percVirus / 100)
	leucocitos = leucocitos + leucocitos * (percLeucocitos / 100)
	dias = dias + 1
	
print(dias)
-- ERROR:
File "XXXX", line 9
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:23:29) 
-- CODE:
virus = int(input("Quantidade inicial de copias do virus: "))
leucocitos = int(input("Quantidade inicial de leucocitos: "))
percVirus = float(input("Percentual de multiplicacao diaria do virus: "))
percLeucocitos = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dias = 0

while(leucocitos >= (virus*2)):
	virus = virus + virus * (percVirus / 100)
	leucocitos = leucocitos + leucocitos * (percLeucocitos / 100)
	dias = dias + 1
	
print(dias)
-- ERROR:
File "XXXX", line 9
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:24:03) 
-- CODE:
virus = int(input("Quantidade inicial de copias do virus: "))
leucocitos = int(input("Quantidade inicial de leucocitos: "))
percVirus = float(input("Percentual de multiplicacao diaria do virus: "))
percLeucocitos = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dias = 0

while(leucocitos >= (virus*2)):
	virus = virus + virus * (percVirus / 100)
	leucocitos = leucocitos + leucocitos * (percLeucocitos / 100)
	dias = dias + 1
	
print(dias)
-- ERROR:
File "XXXX", line 9
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:24:51) 
-- CODE:
virus = int(input("Quantidade inicial de copias do virus: "))
leucocitos = int(input("Quantidade inicial de leucocitos: "))
percVirus = float(input("Percentual de multiplicacao diaria do virus: "))
percLeucocitos = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dias = 0

while(leucocitos <= (virus*2)):
	virus = virus + virus * (percVirus / 100)
	leucocitos = leucocitos + leucocitos * (percLeucocitos / 100)
	dias = dias + 1
	
print(dias)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:25:48) 
-- CODE:
virus = int(input("Quantidade inicial de copias do virus: "))
leucocitos = int(input("Quantidade inicial de leucocitos: "))
percVirus = float(input("Percentual de multiplicacao diaria do virus: "))
percLeucocitos = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dias = 0

while(leucocitos <= (virus*2)):
	virus = virus + virus * (percVirus / 100)
	leucocitos = leucocitos + leucocitos * (percLeucocitos / 100)
	dias = dias + 1
	
print(dias)
-- EXECUTION TIME:
0.125047
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
